@@ -1,3 +1,7 @@
+2010-05-27  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14489: htmlArea RTE: color dialogues do not show all configured colors
+
 2010-05-27  Oliver Hader  <oliver@typo3.org>
 
 	* Follow-up to #14465: Missing argument when rendering language preview in page module
